# blueprint-work

./: .mcp.json  CLAUDE.md  Cargo.toml  PRD.md
.blueprint/: schema.md  setting.json  task_template.md
.claude/: settings.json
.claude/commands/: polish.md
.workitems/: CLAUDE.md  _template.md
.workitems/epic_00_foundation/: overview.md  task_00_cargo-init.md  task_01_sqlite-schema.md  task_02_project-model.md  task_03_epic-model.md  task_04_task-model.md  task_05_dependency-model.md
.workitems/epic_01_mcp-server/: overview.md  task_00_jsonrpc-transport.md  task_01_mcp-handshake.md  task_02_project-tools.md  task_03_epic-tools.md  task_04_task-tools.md  task_05_dependency-tools.md  task_06_status-tool.md  task_07_feed-prd-tool.md
.workitems/epic_02_tui-dashboard/: overview.md  task_00_tui-skeleton.md  task_01_cyberpunk-theme.md  task_02_project-selector.md  task_03_epic-list-panel.md  task_04_task-list-panel.md  task_05_status-panel.md  task_06_mini-deps-panel.md  task_07_keyboard-nav.md  task_08_auto-refresh.md
.workitems/epic_03_dependency-graph/: overview.md  task_00_dag-layout.md  task_01_edge-crossing.md  task_02_node-renderer.md  task_03_marching-border.md  task_04_pulsing-border.md  task_05_edge-routing.md  task_06_epic-graph.md  task_07_task-graph.md  task_08_graph-scroll.md  task_09_summary-bar.md
.workitems/epic_04_cli-polish/: overview.md  task_00_status-command.md  task_01_ascii-header.md  task_02_error-handling.md  task_03_readme.md
migrations/: 001_init.sql  002_short_ids.sql  003_session_id.sql
src/: main.rs  settings.rs
src/db/: epic.rs  (+7 more)
(+23 files in other folders)
